# anomalytics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yaml  poc.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  cd-prod.yaml  cd-stg.yaml  ci.yaml  code-quality.yaml  test.yaml
docs/: example.ipynb
docs/examples/: battery_water_level_analysis.ipynb  extreme_anomaly_df_analysis.ipynb
docs/source/: conf.py  index.rst
src/anomalytics/: __init__.py
src/anomalytics/evals/: __init__.py  kolmogorv_smirnov.py  qq_plot.py
src/anomalytics/models/: __init__.py  abstract.py  autoencoder.py  block_maxima.py  dbscan.py  detector.py  isoforest.py  mad.py  one_class_svm.py  peaks_over_threshold.py  zscore.py
src/anomalytics/notifications/: __init__.py  abstract.py  email.py  notification.py  slack.py
src/anomalytics/plots/: __init__.py  hist.py  line.py  plot.py
src/anomalytics/stats/: __init__.py  peaks_over_threshold.py
src/anomalytics/time_series/: __init__.py  upload.py
src/anomalytics/time_windows/: __init__.py  pot_window.py  pot_windows.py  time_window.py
tests/: conftest.py  test_detectors.py  test_evaluation_methods.py  test_peaks_over_threshold.py  test_time_series.py  test_time_windows.py  test_version.py
tests/unit/detectors/: test_detectors.py  test_pot_detector.py
tests/unit/evals/: test_eval_ks_1_sample.py  test_eval_qq_plot.py
tests/unit/notifications/: test_email_notification.py  test_notification.py  test_slack_notification.py
tests/unit/stats/: test_peaks_over_threshold.py
tests/unit/time_windows/: test_set_time_windows.py
